# ECE4122

./: README.md  how_to_cmake.txt  how_to_mpi.rtf  how_to_pace-ice.txt  note.txt
p1/: CMakeLists.txt  main.cc
p1/src/: array.cc  array.h
p2/: CMakeLists.txt
p2/src/: output.csv  output2d.csv  sample.conf  test.cu
p3/: CMakeLists.txt  main_cuda.cu  main_mpi.cc  main_thread.cc
p3/src/: complex.cc  input_image.cc
se1/: CMakeLists.txt  main.cc
se1/src/: vector3.cc  vector3.h
se2/: CMakeLists.txt
se2/src/: main.cc
